  - Add missing List::MoreUtils dep
  - Fix missing JSON dependency
    by using JSON::MaybeXS also for tests
  - Document Output::Test clear_messages method

0.116 2015-02-23T18:00:00+01:00
  - Fix link in 'Writing Filters' section of
    Message::Passing::Manual::Components
  - Fix daemonize_if_needed spelling
  - Add documentation for all command line options
  - Add Linux::IO_Prio to recommended modules for io_priority option
  - Recommend newer Message::Passing::Output::Search::Elasticsearch in docs

0.115 2014-08-23T09:55:00+03:00 YAPC::EU 2014 release
  - Fix internal and therefore undocumented type parameter swallows
    Output::Search::Elasticsearches type parameter
  - Use JSON::MaybeXS instead of JSON in Filter::De/Encoder::JSON

0.114 2013-09-17T10:30:00+02:00
  - Fix test failures under Perl 5.18
  - Improve documentation

0.113 2013-08-02T09:25:00+02:00
  - Add Message::Passing::Filter::Mangle for use with Message::Passing::DSL
    when you don't want to write a named filter.

0.112 2013-04-25T23:45:39+0100
  - Change to LGPL_2_1.

0.111 2013-03-03T15:54:12+0000
  - Fix STDIN input to exit on EOF.

0.110 2012-10-08T16:51:49+0100
  - Fix v-string to work with perl 5.8. RT#80034
  - Fix issues stopping multiple FileTail inputs being used in the
    same process.

0.109 2012-09-27T16:11:50+0100
  - Really fix test fail :(

0.108 2012-09-27T14:59:43+0100
  - Fix test fail on some machines.

0.107 2012-09-27T10:03:30+0100
  - Change Input::FileTail to use Sys::Hostname::Long

  - Fix bug causing crash with no helpful error message if PID file
    location is not writeable.

0.106 2012-09-12T23:59:13+0100
  - Remove debug warning accidentally left in the UDP input.

0.105 2012-09-12T23:55:36+0100
  - Depend on latest MooX::Options to stop install fails.

0.104 2012-09-06T18:36:27+0200
  - Fix to work with MooX::Options 3.7

0.103 2012-09-05T09:07:00+0100
  - Message::Passing::Input::FileTail now defaults to outputting a hash