@@ -29,7 +29,7 @@ requires 'Task::Weaken';
 requires 'Sys::Hostname::Long';
 requires 'DateTime';
 requires 'IO::Handle';
-requires 'List::MoreUtils';
+requires 'List::Util' => 1.45;
 
 recommends 'Linux::IO_Prio' => 0.03;
 
